tests/ui/ferrocene/compiler-arguments/upper_c_panic/upper_c_panic_space-empty.rs
//@ check-fail
//@ compile-flags: -C panic
//~? ERROR requires either `unwind` or `abort`

fn main() {}

// ferrocene-annotations: um_rustc_C_panic
